# llm-systems-and-experiments

./: .gitignore  Makefile  README.md  requirements.txt
.github/workflows/: bench-gates.yml
docqa_vectorless_gpt52/: README.md  pyproject.toml  requirements.txt
docqa_vectorless_gpt52/src/docqa/: __init__.py  cli.py  config.py  db.py  extract_figure.py  extract_inventory.py  extract_table.py  index.py  ingest.py  openai_client.py  pdf_utils.py  qa.py  retrieval.py  schemas.py  server.py  utils.py
learning-to-discover-at-test-time_ttt-discover_ramsey-r55/: README.md
learning-to-discover-at-test-time_ttt-discover_ramsey-r55/scripts/: run_search.py  verify_graph.py
learning-to-discover-at-test-time_ttt-discover_ramsey-r55/src/: buffer_puct.py  entropic.py  export.py  graph.py  policy.py  reward.py  runner.py  verifier.py
papers/rlm-demo/: README.md
rlm-demo/: .gitignore  README.md  llm_subcall_mini.csv  nested_vs_delegation.csv  semantic_embed_probe.csv  sweep_live_v2.csv
rlm-demo/bench/: __init__.py  bucketing.py  chunking.py  compare_runs.py  gates.py  incremental_ingest.py  llm_clients.py  loaders.py  metrics.py  pipelines.py  run.py  scale_sweep.py  schema.py
rlm-demo/docs/: benchmark_dataset_format.md  public_benchmark_results.md  real_benchmark_results.md  release_decision.md  sweep_conclusions.md  system_overview.md
rlm-demo/examples/: book_qa_vectorless_demo.py  debug_depth2_trace.py  llm_subcall_mini.py  nested_vs_delegation.py  openai_responses_run.py  plot_sweep.py  rlm_selector_sweep.py  root_sub_strength_demo.py  semantic_embed_probe.py
(+52 files in other folders)
