[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docqa-vectorless-gpt52"
version = "0.1.0"
description = "Vectorless document QA with table + chart extraction using GPT-5.2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["docqa", "pdf", "qa", "gpt", "openai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "openai>=1.40.0",
  "pypdf>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "typer>=0.12.0",
  "jsonschema>=4.19.0",
]

[project.scripts]
docqa = "docqa.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
